modules/kubernetes/manifests/frontend-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stratomesh-frontend-canary
  namespace: stratomesh
  labels:
    monitoring: stratomesh-frontend-canary
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: stratomesh-frontend
